--- a/backend/Dilon.EntityFramework.Core/Dilon.EntityFramework.Core.csproj
+++ b/backend/Dilon.EntityFramework.Core/Dilon.EntityFramework.Core.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
   </ItemGroup>
 
   <ItemGroup>
