新增 阿里云OSS

--- a/backend/Dilon.Application/Dilon.Application.csproj
+++ b/backend/Dilon.Application/Dilon.Application.csproj
@@ -22,7 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Furion.Extras.DatabaseAccessor.SqlSugar" Version="1.17.4" />
+    <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.13.0" />
+    <PackageReference Include="Furion.Extras.DatabaseAccessor.SqlSugar" Version="2.0.8" />
   </ItemGroup>
 
 </Project>
