--- a/frontend/.env.preview
+++ b/frontend/.env.preview
@@ -1,3 +1,4 @@
 NODE_ENV=production
 VUE_APP_PREVIEW=false
-VUE_APP_API_BASE_URL=http://localhost:5566
+VUE_APP_API_BASE=/api
+VUE_APP_API_BASE_URL=http://192.168.0.246:8000
