--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.10.2",
-    "ant-design-vue": "1.7.4",
+    "ant-design-vue": "1.5.0-rc.6",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "clipboard": "^2.0.6",
@@ -23,6 +23,7 @@
     "jquery": "^3.5.1",
     "jsbarcode": "^3.11.3",
     "k-form-design": "^3.7.3",
+    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
@@ -59,6 +60,7 @@
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^6.8.0",
     "eslint-plugin-html": "^5.0.0",
@@ -71,7 +73,7 @@
     "prettier": "^1.18.2",
     "vue-svg-icon-loader": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack-theme-color-replacer": "1.3.18"
+    "webpack-theme-color-replacer": "^1.2.17"
   },
   "collective": {
     "type": "opencollective",
