--- a/backend/Dilon.EntityFramework.Core/dbsettings.json
+++ b/backend/Dilon.EntityFramework.Core/dbsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=10.0.5.205;Database=Dilon;User ID=sa;Password=quyixian326;pooling=true;port=3306;sslmode=none;CharSet=utf8;",
-    "OAConnection": "Data Source=10.0.5.205;Database=furion;User ID=sa;Password=quyixian326;pooling=true;port=3306;sslmode=none;CharSet=utf8;",
-    "PgSqlConnection": "HOST=127.0.0.1;PORT=5432;DATABASE=dilon;PASSWORD=postgres;USER ID=postgres;",
-    "MultiTenantConnection": "Data Source=10.0.5.205;Database=Dilon;User ID=sa;Password=quyixian326;pooling=true;port=3306;sslmode=none;CharSet=utf8;"
+    "DefaultConnection": "Data Source=./Dilon.db",
+    "MultiTenantConnection": "Data Source=./Dilon_SaaS.db",
+    "PgSqlConnection": "HOST=127.0.0.1;PORT=5432;DATABASE=dilon;PASSWORD=123qwe;USER ID=postgres;"
   }
 }
