--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,9 @@
     "vue-svg-component-runtime": "^1.0.1",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.1",
-    "wangeditor": "^3.1.1"
+    "vxe-table": "^3.2.19",
+    "wangeditor": "^3.1.1",
+    "xe-utils": "^3.1.15"
   },
   "devDependencies": {
     "@ant-design/colors": "^3.2.1",
@@ -71,6 +73,7 @@
     "prettier": "^1.18.2",
     "vue-svg-icon-loader": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.0.0",
     "webpack-theme-color-replacer": "1.3.18"
   },
   "collective": {
