--- a/backend/Dilon.Application/Dilon.Application.csproj
+++ b/backend/Dilon.Application/Dilon.Application.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Furion.Extras.DatabaseAccessor.SqlSugar" Version="2.0.11" />
+    <Folder Include="Service\Tables\BasicTable\Dto\" />
   </ItemGroup>
 
 </Project>
