--- a/backend/Dilon.Core/Dilon.Core.csproj
+++ b/backend/Dilon.Core/Dilon.Core.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="CSRedisCore" Version="3.6.6" />
     <PackageReference Include="Furion" Version="2.0.12" />
     <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="2.0.12" />
+    <PackageReference Include="Furion.Extras.DatabaseAccessor.SqlSugar" Version="2.1.2" />
     <PackageReference Include="Furion.Extras.Logging.Serilog" Version="2.0.12" />
     <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="2.0.12" />
     <PackageReference Include="MiniExcel" Version="0.13.3" />
