--- a/backend/Dilon.Web.Entry/Properties/launchSettings.json
+++ b/backend/Dilon.Web.Entry/Properties/launchSettings.json
@@ -22,7 +22,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:5566"
+      "applicationUrl": "http://192.168.0.18:5566"
     }
   }
 }
