新增斑马线表格

--- a/backend/Dilon.Application/Dilon.Application.csproj
+++ b/backend/Dilon.Application/Dilon.Application.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Service\Tables\BasicTable\Dto\" />
+    <Folder Include="Service\Tables\StripeTable\Dto\" />
   </ItemGroup>
 
 </Project>
