--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@antv/data-set": "^0.10.2",
     "@jiaminghi/data-view": "^2.10.0",
     "@microsoft/signalr": "^5.0.5",
+    "@vue/composition-api": "^1.0.0-rc.8",
     "ant-design-vue": "1.7.4",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
@@ -20,6 +21,7 @@
     "core-js": "^3.1.2",
     "crypto-js": "^4.0.0",
     "default-passive-events": "^1.0.10",
+    "echarts": "^5.1.1",
     "enquire.js": "^2.1.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
@@ -42,6 +44,7 @@
     "vue-clipboard2": "^0.2.1",
     "vue-codemirror-lite": "^1.0.4",
     "vue-cropper": "0.4.9",
+    "vue-echarts": "^6.0.0-rc.5",
     "vue-ls": "^3.2.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.2",
