添加金蝶接口请求方法

--- a/backend/Admin.NET.Application/applicationsettings.json
+++ b/backend/Admin.NET.Application/applicationsettings.json
@@ -1,3 +1,11 @@
 ﻿{
-
+  "OAuth": {
+    "Kingdee": {
+      "dbId": "6094db2e266745", //账套ID
+      "user": "Administrator", //用户
+      "appId": "API", //AppId
+      "appSecret": "205149333c7c444fb30b34ceab5eab97", //秘钥
+      "lang": 2052 //语言
+    }
+  }
 }
