修改为自己用的 mysql

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ bin-release/
 /**/*.lock
 
 /outputs/
+/backend/_ReSharper.Caches/ReSharperPlatformVs16211_62c2a8d2.Admin.NET.00
+/_ReSharper.Caches/ReSharperPlatformVs16211_62c2a8d2.00
