--- a/backend/Admin.NET.EntityFramework.Core/Admin.NET.EntityFramework.Core.csproj
+++ b/backend/Admin.NET.EntityFramework.Core/Admin.NET.EntityFramework.Core.csproj
@@ -17,6 +17,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.6" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
+    <PackageReference Include="Zack.EFCore.Batch.MySQL.Pomelo" Version="1.2.6" />
     <PackageReference Include="Zack.EFCore.Batch.Sqlite" Version="1.2.6" />
   </ItemGroup>
 
