--- a/backend/Admin.NET.EntityFramework.Core/Admin.NET.EntityFramework.Core.csproj
+++ b/backend/Admin.NET.EntityFramework.Core/Admin.NET.EntityFramework.Core.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Zack.EFCore.Batch.MSSQL_NET6" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Admin.NET.Core\Admin.NET.Core.csproj" />
   </ItemGroup>
 
