--- a/backend/Admin.NET.EntityFramework.Core/dbsettings.json
+++ b/backend/Admin.NET.EntityFramework.Core/dbsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
 	//Sqlite连接字符串
-    "DefaultConnection": "Data Source=./Admin.NET.db",
-    "MultiTenantConnection": "Data Source=./Admin.NET_SaaS.db"
+    //"DefaultConnection": "Data Source=./Admin.NET.db",
+    //"MultiTenantConnection": "Data Source=./Admin.NET_SaaS.db"
 	
 	//Npgsql连接字符串
     //"DefaultConnection": "HOST=localhost;PORT=5432;DATABASE=Admin.NET;PASSWORD=123456;USER ID=postgres;",
@@ -13,7 +13,7 @@
 	//"MultiTenantConnection": "Data Source=localhost;Database=Admin.NET_SaaS;User ID=root;Password=123456;pooling=true;port=3306;sslmode=none;CharSet=utf8;"
 	
 	//MSSQL连接字符串
-    //"DefaultConnection": "Server=localhost;Database=Admin.NET;User=sa;Password=123456;MultipleActiveResultSets=True;",
-	//"MultiTenantConnection": "Server=localhost;Database=Admin.NET_SaaS;User=sa;Password=123456;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=localhost;Database=Admin.NET;User=sa;Password=63005508;MultipleActiveResultSets=True;",
+	"MultiTenantConnection": "Server=localhost;Database=Admin.NET_SaaS;User=sa;Password=63005508;MultipleActiveResultSets=True;"
   }
 }
