--- a/backend/Furion.Extras.Admin.NET/Furion.Extras.Admin.NET.csproj
+++ b/backend/Furion.Extras.Admin.NET/Furion.Extras.Admin.NET.csproj
@@ -47,7 +47,7 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
     <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.12" />
-    <PackageReference Include="Zack.EFCore.Batch.Sqlite_NET6" Version="6.0.8" />
+    <PackageReference Include="Zack.EFCore.Batch_NET6" Version="6.0.9" />
   </ItemGroup>
 
 </Project>
