--- a/backend/Admin.NET.Web.Entry/appsettings.Development.json
+++ b/backend/Admin.NET.Web.Entry/appsettings.Development.json
@@ -28,7 +28,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "EnabledReferenceAssemblyScan": true, // 启用模块化程序集扫描
-    "ExternalAssemblies": [ "plugins/Covid19.Plugin" ] //动态加载 dll
+    //"EnabledReferenceAssemblyScan": true, // 启用模块化程序集扫描
+    //"ExternalAssemblies": [ "plugins/Covid19.Plugin" ] //动态加载 dll
   }
 }
