--- a/backend/Admin.NET.Web.Entry/appsettings.json
+++ b/backend/Admin.NET.Web.Entry/appsettings.json
@@ -28,8 +28,8 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "EnabledReferenceAssemblyScan": true, // 启用模块化程序集扫描
-    "ExternalAssemblies": [ "plugins/Covid19.Plugin" ] //动态加载 dll
+    //"EnabledReferenceAssemblyScan": true, // 启用模块化程序集扫描
+    //"ExternalAssemblies": [ "plugins/Covid19.Plugin" ] //动态加载 dll
   }
   //"Kestrel": { //预留服务器配置
   //  "EndPoints": {
