--- a/Admin.NET/Admin.NET.Web.Entry/Properties/launchSettings.json
+++ b/Admin.NET/Admin.NET.Web.Entry/Properties/launchSettings.json
@@ -20,7 +20,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "",
+      "launchUrl": "api",
       "applicationUrl": "https://localhost:44326;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
