--- a/Vben2/.vscode/settings.json
+++ b/Vben2/.vscode/settings.json
@@ -55,7 +55,7 @@
     "**/yarn.lock": true
   },
   "stylelint.enable": true,
-  "stylelint.packageManager": "yarn",
+  "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass"],
   "path-intellisense.mappings": {
     "/@/": "${workspaceRoot}/src"
   },
@@ -88,9 +88,9 @@
   },
   "[vue]": {
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": false
-    },
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+      "source.fixAll.eslint": true,
+      "source.fixAll.stylelint": true
+    }
   },
   "i18n-ally.localesPaths": ["src/locales/lang"],
   "i18n-ally.keystyle": "nested",
