--- a/Vben2/.env.development
+++ b/Vben2/.env.development
@@ -18,5 +18,7 @@ VITE_GLOB_API_URL=/api
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=https://localhost:44326
 
+VITE_GLOB_DOWNLOAD_URL=https://localhost:44326/Upload
+
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=
