--- a/backend/Admin.NET.EntityFramework.Core/Admin.NET.EntityFramework.Core.csproj
+++ b/backend/Admin.NET.EntityFramework.Core/Admin.NET.EntityFramework.Core.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Zack.EFCore.Batch.Sqlite_NET6" Version="6.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Admin.NET.Core\Admin.NET.Core.csproj" />
   </ItemGroup>
 
