--- a/backend/Furion.Extras.Admin.NET/Furion.Extras.Admin.NET.csproj
+++ b/backend/Furion.Extras.Admin.NET/Furion.Extras.Admin.NET.csproj
@@ -35,21 +35,21 @@
   <ItemGroup>
     <PackageReference Include="Caching.CSRedis" Version="3.6.90" />
     <PackageReference Include="CSRedisCore" Version="3.6.9" />
-    <PackageReference Include="Furion" Version="3.0.6" />
-    <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="3.0.6" />
-    <PackageReference Include="Furion.Extras.Logging.Serilog" Version="3.0.6" />
-    <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="3.0.6" />
+    <PackageReference Include="Furion" Version="3.1.3" />
+    <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="Furion.Extras.Logging.Serilog" Version="3.1.3" />
+    <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="3.1.3" />
     <PackageReference Include="Magicodes.IE.Excel" Version="2.6.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.3" />
-    <PackageReference Include="MiniExcel" Version="1.23.2" />
+    <PackageReference Include="MiniExcel" Version="1.24.3" />
     <PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.1.4" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta14" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
     <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.12" />
-    <PackageReference Include="Zack.EFCore.Batch.Sqlite_NET6" Version="6.0.11" />
+    <PackageReference Include="Zack.EFCore.Batch_NET6" Version="6.0.11" />
   </ItemGroup>
 
 </Project>
