--- a/Admin.NET/Admin.NET.Core/AdminNETConfig.json
+++ b/Admin.NET/Admin.NET.Core/AdminNETConfig.json
@@ -14,8 +14,8 @@
     "InjectSpecificationDocument": true // 生产环境是否开启Swagger
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=.;uid=sa;pwd=123456;database=db1;MultipleActiveResultSets=True", // "server=127.0.0.1;uid=sa;pwd=123456;database=db;MultipleActiveResultSets=True",
-    "DefaultDbType": "SqlServer", // MySql、SqlServer、Sqlite、Oracle、PostgreSQL、Dm、Kdbndp、Oscar、MySqlConnector、Access
+    "DefaultConnection": "DataSource=./Admin.Net.db", // "server=127.0.0.1;uid=sa;pwd=123456;database=db;MultipleActiveResultSets=True",
+    "DefaultDbType": "Sqlite", // MySql、SqlServer、Sqlite、Oracle、PostgreSQL、Dm、Kdbndp、Oscar、MySqlConnector、Access
     "InitTable": true,
     "DbConfigs": [
       //{
