--- a/backend/Admin.NET.Web.Entry/Properties/launchSettings.json
+++ b/backend/Admin.NET.Web.Entry/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -17,22 +17,28 @@
     },
     "Development-Admin.NET": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5566",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development" //这里对应配置文件 比如：appsettings.Development.json
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5566",
+      "launchUrl": "http://localhost:5566/swagger/",
+      "dotnetRunMessages": "true"
     },
-    //生产环境-自定义
     "Production-Admin.NET": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5566",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production" //对应 appsettings.json  dbsettings.json
-      }
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "http://localhost:5566",
+      "dotnetRunMessages": "true"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
