--- a/Admin.NET/Admin.NET.Application/Admin.NET.Application.csproj
+++ b/Admin.NET/Admin.NET.Application/Admin.NET.Application.csproj
@@ -7,23 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="applicationsettings.json" />
+    <None Remove="AppConfig.json" />
     <None Remove="Admin.NET.Application.xml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="applicationsettings.json">
+    <Content Include="AppConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Admin.NET.Core\Admin.NET.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Entity\" />
-    <Folder Include="Service\" />
   </ItemGroup>
 
 </Project>
