--- a/Admin.NET/Admin.NET.Core/Admin.NET.Core.csproj
+++ b/Admin.NET/Admin.NET.Core/Admin.NET.Core.csproj
@@ -19,18 +19,23 @@
 
   <ItemGroup>
     <PackageReference Include="Caching.CSRedis" Version="3.6.90" />
-    <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="3.1.1" />
-    <PackageReference Include="Furion.Extras.Logging.Serilog" Version="3.1.1" />
-    <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="3.1.1" />
-    <PackageReference Include="Furion.Pure" Version="3.1.1" />
-    <PackageReference Include="MiniExcel" Version="1.24.3" />
+    <PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="Furion.Extras.Logging.Serilog" Version="3.1.3" />
+    <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="3.1.3" />
+    <PackageReference Include="Furion.Pure" Version="3.1.3" />
+    <PackageReference Include="Magicodes.IE.Excel" Version="2.6.3" />
+    <PackageReference Include="MySql.Data" Version="8.0.28" />
     <PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.1.4" />
     <PackageReference Include="SKIT.FlurlHttpClient.Wechat.Api" Version="2.9.0" />
     <PackageReference Include="SKIT.FlurlHttpClient.Wechat.TenpayV3" Version="2.7.0" />
-    <PackageReference Include="SqlSugarCore" Version="5.0.6.1" />
+    <PackageReference Include="SqlSugarCore" Version="5.0.6.7" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
     <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Service\File\" />
   </ItemGroup>
 
 </Project>
