--- a/Vben2/.env.production
+++ b/Vben2/.env.production
@@ -1,8 +1,8 @@
 # Whether to open mock
-VITE_USE_MOCK = true
+VITE_USE_MOCK = false
 
 # public path
-VITE_PUBLIC_PATH = /
+VITE_PUBLIC_PATH = ./
 
 # Delete console
 VITE_DROP_CONSOLE = true
@@ -16,11 +16,11 @@ VITE_BUILD_COMPRESS = 'none'
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/api
+VITE_GLOB_API_URL=https://localhost:44326
 
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
-VITE_GLOB_UPLOAD_URL=/upload
+VITE_GLOB_UPLOAD_URL=https://localhost:44326
 
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=
