--- a/Admin.NET/Admin.NET.Application/AppConfig.json
+++ b/Admin.NET/Admin.NET.Application/AppConfig.json
@@ -2,12 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=C:\\db\\Admin.NET.db",
     "DefaultDbType": "Sqlite", // MySql、SqlServer、Sqlite、Oracle、PostgreSQL、Dm、Kdbndp、Oscar、MySqlConnector、Access
-    "InitTable": false,
+    "InitTable": true, // 是否生成库表和种子数据
     "DbConfigs": [
       //{
-      //  "DbConfigId": "标识",
+      //  "DbConfigId": "Test",
       //  "DbType": "Sqlite",
-      //  "DbConnection": "业务数据库"
+      //  "DbConnection": "DataSource=C:\\db\\Test.db"
       //}
     ]
   }
