--- a/Admin.NET/Admin.NET.UnitTest/Admin.NET.UnitTest.csproj
+++ b/Admin.NET/Admin.NET.UnitTest/Admin.NET.UnitTest.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Admin.NET.Web.Core\Admin.NET.Web.Core.csproj" />
+    <ProjectReference Include="..\Admin.NET.Application\Admin.NET.Application.csproj" />
   </ItemGroup>
 
 </Project>
