--- a/Admin.NET/Admin.NET.Core/Admin.NET.Core.csproj
+++ b/Admin.NET/Admin.NET.Core/Admin.NET.Core.csproj
@@ -23,12 +23,12 @@
     <PackageReference Include="Furion.Extras.Logging.Serilog" Version="3.1.4" />
     <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="3.1.4" />
     <PackageReference Include="Furion.Pure" Version="3.1.4" />
-    <PackageReference Include="Magicodes.IE.Excel" Version="2.6.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+    <PackageReference Include="Magicodes.IE.Excel" Version="2.6.4" />
+    <PackageReference Include="MySql.Data" Version="8.0.28" />
     <PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.1.4" />
     <PackageReference Include="SKIT.FlurlHttpClient.Wechat.Api" Version="2.10.0" />
     <PackageReference Include="SKIT.FlurlHttpClient.Wechat.TenpayV3" Version="2.7.0" />
-    <PackageReference Include="SqlSugarCore" Version="5.0.7.4-preview01" />
+    <PackageReference Include="SqlSugarCore" Version="5.0.7.4-preview02" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
     <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.12" />
