--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,15 @@ bin-release/
 /Admin.NET/Admin.NET.Web.Entry/logs
 /Admin.NET/.vs
 /Vben2/yarn.lock
+/Vben2/pnpm-lock.yaml
 /Vben2/dist
+/Vben2/src/settings/componentSetting.ts
+/Vben2/src/settings/encryptionSetting.ts
+/Vben2/.env
 /Vben2/node_modules
+/.gitignore
 /Admin.NET/Admin.NET.Web.Entry/wwwroot/Upload
 /App/MedicalPay/unpackage
+/Admin.NET/Admin.NET.Application/AppConfig.json
+/Admin.NET/Admin.NET.Core/Admin.NET.Core.xml
+/Admin.NET/Admin.NET.Core/SeedData/SysOrgSeedData.cs
