Squashed commit of the following:
commit f13e13936dac215440abaf972acf8f82521d904e
Author: zuohuaijun <zuohuaijun@163.com>
Date:   Tue Apr 19 01:10:06 2022 +0800

    更新sqlsugar

commit 137a31d558506404869b31529d046186b43613b9
Author: zuohuaijun <zuohuaijun@163.com>
Date:   Tue Apr 19 01:07:59 2022 +0800

    优化、修改机构添加bug

commit 0472be7b95ab734030b5fc3e6370e552f912b16e
Author: sanmen359 <sanmen359@hotmail.com>
Date:   Tue Apr 19 00:35:42 2022 +0800

    模板完善

commit d777f6263dd0816869308a09a2d315128723a158
Merge: fac32f4 746afec
Author: sanmen359 <sanmen359@hotmail.com>
Date:   Tue Apr 19 00:15:41 2022 +0800

    Merge branch 'next' of https://gitee.com/wedo_app/Admin.NET into next

commit fac32f46c64445508fdb334dae1bdae1f858ed32
Author: sanmen359 <sanmen359@hotmail.com>
Date:   Tue Apr 19 00:15:12 2022 +0800

    模板中添加时间范围搜索

commit 746afec42ee9b882359dd065a880c5452fdcb571
Author: zuohuaijun <zuohuaijun@163.com>
Date:   Mon Apr 18 17:31:07 2022 +0800

    优化

commit bb28fad9a8582e87c30bf2a9ab9fa6a416e923e3
Author: zuohuaijun <zuohuaijun@163.com>
Date:   Mon Apr 18 15:06:58 2022 +0800

    优化

commit 4c332a3500690a82ee4579f0adba1013c56f4b91
Merge: 914b4c1 9624b50
Author: zuohuaijun <zuohuaijun@163.com>
Date:   Mon Apr 18 14:54:16 2022 +0800

    Merge commit 'refs/pull/269/head' of https://gitee.com/zuohuaijun/Admin.NET into next

commit 9624b5060e27fcc0f5856613559bd8b551b846cf
Author: 396858579 <396858579@qq.com>
Date:   Sun Apr 17 19:31:37 2022 +0800

    修改组织架构功能

commit 914b4c1c7c8fdb34d4b01ee07bbf78d55c24ddb9
Author: sanmen359 <sanmen359@hotmail.com>
Date:   Sun Apr 17 10:36:28 2022 +0800

    测试要引用Admin.NET.Web.Core 因为要继承Startup。否则要自己手写一遍。

commit 50575d724b71db8fdbc86502f6ab329ef1539f2f
Author: sanmen359 <sanmen359@hotmail.com>
Date:   Sun Apr 17 10:10:56 2022 +0800

    修复AddSqlSugarSetup兼容命令行

commit c308ada2cdb1c549f34ea94207f3d4cc95ae72c8
Merge: 47dc906 3a71861
Author: sanmen359 <sanmen359@hotmail.com>
Date:   Sun Apr 17 10:01:04 2022 +0800

    Merge bra

--- a/Admin.NET/Admin.NET.UnitTest/Admin.NET.UnitTest.csproj
+++ b/Admin.NET/Admin.NET.UnitTest/Admin.NET.UnitTest.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Admin.NET.Application\Admin.NET.Application.csproj" />
+    <ProjectReference Include="..\Admin.NET.Web.Core\Admin.NET.Web.Core.csproj" />
   </ItemGroup>
 
 </Project>
