--- a/Admin.NET/Admin.NET.Web.Entry/Properties/launchSettings.json
+++ b/Admin.NET/Admin.NET.Web.Entry/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "launchUrl": "api",
       "applicationUrl": "https://localhost:44326;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
