--- a/Admin.NET/Admin.NET.Web.Entry/Dockerfile.local
+++ b/Admin.NET/Admin.NET.Web.Entry/Dockerfile.local
@@ -3,7 +3,10 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
-COPY "Admin.NET.Web.Entry/publish" .
-# 不使用AppConfig.json 而使用appsettings.Docker.json配置
-RUN rm -rf AppConfig.json 
-ENTRYPOINT ["dotnet", "Admin.NET.Web.Entry.dll"]
+EXPOSE 443
+COPY Admin.NET.Web.Entry/publish .
+
+RUN rm -rf AppConfig.json
+RUN rm -rf AdminNETConfig.json
+ENTRYPOINT ["dotnet", "Admin.NET.Web.Entry.dll"] 
+ 
