--- a/Vben2/Dockerfile.local
+++ b/Vben2/Dockerfile.local
@@ -1,13 +1,9 @@
-FROM node:16-alpine as build
-
-WORKDIR /app
-COPY package*.json /app/
-COPY . .
-RUN yarn
-RUN yarn build
-COPY ./dist/ /usr/share/nginx/html
+FROM nginx:1.20-alpine as base
+EXPOSE 80
+EXPOSE 443
 COPY /_nginx/nginx.conf /etc/nginx/nginx.conf
 COPY /_nginx/env.js /etc/nginx/env.js
 COPY /_nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY /dist/ /usr/share/nginx/html
 
 CMD ["nginx", "-g", "daemon off;"]
