将日志插入es

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ bin-release/
 /App/MedicalPay/unpackage
 /Admin.NET/packages
 /Admin.NET/Admin.NET.Web.Entry/Properties/PublishProfiles
+/script/.tye
