--- a/Admin.NET/Admin.NET.Web.Entry/appsettings.Production.json
+++ b/Admin.NET/Admin.NET.Web.Entry/appsettings.Production.json
@@ -96,5 +96,39 @@
     "WechatRefundUrl": "/notify/weChatPay/refund", //微信退款回调
     "AlipayUrl": "", //支付宝支付回调
     "AlipayRefundUrl": "" //支付宝退款回调
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "【时间】{Timestamp:yyyy-MM-dd HH:mm:ss,fff}{NewLine}【等级】{Level:u3}{NewLine}【消息】{Message:lj}{NewLine}{NewLine}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "【时间】{Timestamp:yyyy-MM-dd HH:mm:ss,fff}{NewLine}【等级】{Level:u3}{NewLine}【消息】{Message:lj}{NewLine}{NewLine}"
+        }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://elasticsearch:9200/",
+          "indexFormat": "admin-index-{0:yyyy.MM}"
+        }
+      }
+    ]
   }
 }
