添加微服务

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ bin-release/
 /Admin.NET/packages
 /Admin.NET/Admin.NET.Web.Entry/Properties/PublishProfiles
 /script/.tye
+/.vs/micro
+/.tye
+/services/demo/Entry/logs
