--- a/Admin.NET/Admin.NET.Core/Admin.NET.Core.csproj
+++ b/Admin.NET/Admin.NET.Core/Admin.NET.Core.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="3.1.4" />
     <PackageReference Include="Furion.Pure" Version="3.1.4" />
     <PackageReference Include="Magicodes.IE.Excel" Version="2.6.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
     <PackageReference Include="MySql.Data" Version="8.0.28" />
     <PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.1.4" />
     <PackageReference Include="SKIT.FlurlHttpClient.Wechat.Api" Version="2.10.0" />
