--- a/backend/Admin.NET.Database.Migrations/Admin.NET.Database.Migrations.csproj
+++ b/backend/Admin.NET.Database.Migrations/Admin.NET.Database.Migrations.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Admin.NET.EntityFramework.Core\Admin.NET.EntityFramework.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\DefaultDb\" />
+  </ItemGroup>
+
 </Project>
