--- a/Admin.NET/Admin.NET.Web.Entry/Admin.NET.Web.Entry.csproj
+++ b/Admin.NET/Admin.NET.Web.Entry/Admin.NET.Web.Entry.csproj
@@ -4,22 +4,18 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
-		<UserSecretsId>3704ae2b-3fe1-497d-b574-4edb729bd449</UserSecretsId>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
-		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="logs\**" />
+	  <Content Remove="logs\**" />
+	  <EmbeddedResource Remove="logs\**" />
+	  <None Remove="logs\**" />
+
 	  <Compile Remove="publish\**" />
 	  <Content Remove="publish\**" />
 	  <EmbeddedResource Remove="publish\**" />
 	  <None Remove="publish\**" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
-	  <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -56,19 +52,7 @@
 	  </Content>
 	</ItemGroup>
 
-	<ItemGroup>
-	  <None Update="WxPayCert\apiclient_cert.p12">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	  <None Update="WxPayCert\apiclient_cert.pem">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	  <None Update="WxPayCert\apiclient_key.pem">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	</ItemGroup>
-
-	<ItemGroup>
+    <ItemGroup>
 	  <None Remove="..\.dockerignore" />
 	</ItemGroup>
 
@@ -79,5 +63,4 @@
 	<ItemGroup>
 	  <None Remove="..\.dockerignore" />
 	</ItemGroup>
-
 </Project>
