--- a/backend/Furion.Extras.Admin.NET/Furion.Extras.Admin.NET.csproj
+++ b/backend/Furion.Extras.Admin.NET/Furion.Extras.Admin.NET.csproj
@@ -48,8 +48,17 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
     <PackageReference Include="UAParser" Version="3.1.47" />
+    <PackageReference Include="WorkflowCore" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.DSL" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.Persistence.EntityFramework" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.Persistence.SqlServer" Version="3.6.3" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.12" />
     <PackageReference Include="Zack.EFCore.Batch_NET6" Version="6.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entity\WorkflowEntity\" />
+    <Folder Include="Workflow\" />
   </ItemGroup>
 
 </Project>
