--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jsbarcode": "^3.11.3",
+    "jsplumb": "^2.15.6",
     "k-form-design": "^3.7.3",
     "leaflet": "^1.7.1",
     "leaflet.pm": "^2.2.0",
