--- a/etc/docker/docker-compose.infrastructure.yml
+++ b/etc/docker/docker-compose.infrastructure.yml
@@ -3,7 +3,7 @@ version: '3.4'
 services:
   rabbitmq:
     container_name: rabbitmq
-    image: rabbitmq:management-alpine
+    image: rabbitmq:3.10-management-alpine
     ports:
       - "15672:15672"
       - "5672:5672"
@@ -31,16 +31,22 @@ services:
       retries: 5  
     networks: 
       - admin_net-network
-  
-  adminer:
-    image: adminer
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:6.8
+    environment:
+        PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+        PGADMIN_DEFAULT_PASSWORD: admin
     ports:
-      - 5050:8080
+      - "5050:80"
+    volumes:
+       - pgadmin_data:/var/lib/pgadmin
     networks: 
       - admin_net-network
       
   seq:
-    image: datalust/seq
+    image: datalust/seq:2022.1
     container_name: seq
     restart: always
     environment:
@@ -55,6 +61,7 @@ services:
       
 volumes:
   postgres_data:
+  pgadmin_data:
 
 networks:
   admin_net-network:
