添加工作流模块

--- a/backend/Admin.NET.Application/Admin.NET.Application.csproj
+++ b/backend/Admin.NET.Application/Admin.NET.Application.csproj
@@ -22,4 +22,13 @@
     <ProjectReference Include="..\Admin.NET.Core\Admin.NET.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Service\System\Workflow\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WorkflowCore" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.DSL" Version="3.6.3" />
+  </ItemGroup>
+
 </Project>
