--- a/backend/Admin.NET.Core/Admin.NET.Core.csproj
+++ b/backend/Admin.NET.Core/Admin.NET.Core.csproj
@@ -32,6 +32,10 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
     <PackageReference Include="UAParser" Version="3.1.47" />
+    <PackageReference Include="WorkflowCore" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.DSL" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.Persistence.EntityFramework" Version="3.6.3" />
+    <PackageReference Include="WorkflowCore.Persistence.SqlServer" Version="3.6.3" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.12" />
     <PackageReference Include="Zack.EFCore.Batch.Sqlite_NET6" Version="6.0.11" />
   </ItemGroup>
