--- a/backend/Admin.NET.Application/Admin.NET.Application.csproj
+++ b/backend/Admin.NET.Application/Admin.NET.Application.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="System\**" />
+    <EmbeddedResource Remove="System\**" />
+    <None Remove="System\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="applicationsettings.json" />
     <None Remove="Admin.NET.Application.xml" />
   </ItemGroup>
@@ -24,7 +30,6 @@
 
   <ItemGroup>
     <Folder Include="Service\System\Workflow\" />
-    <Folder Include="System\Services\" />
   </ItemGroup>
 
   <ItemGroup>
