处理多余代码

--- a/backend/Admin.NET.Application/Admin.NET.Application.csproj
+++ b/backend/Admin.NET.Application/Admin.NET.Application.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Admin.NET.Application.xml" />
     <Content Include="applicationsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
