模板格式调整

--- a/backend/Admin.NET.Application/Admin.NET.Application.csproj
+++ b/backend/Admin.NET.Application/Admin.NET.Application.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Entity\" />
     <Folder Include="Service\System\Workflow\" />
   </ItemGroup>
 
