代码生成逻辑调整

--- a/backend/Admin.NET.Core/Admin.NET.Core.csproj
+++ b/backend/Admin.NET.Core/Admin.NET.Core.csproj
@@ -26,6 +26,7 @@
 		<PackageReference Include="Magicodes.IE.Excel" Version="2.6.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.5" />
+		<PackageReference Include="NString" Version="2.1.1" />
 		<PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.1.5" />
 		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta14" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
