--- a/backend/Admin.NET.Web.Entry/appsettings.json
+++ b/backend/Admin.NET.Web.Entry/appsettings.json
@@ -30,7 +30,122 @@
   "AppSettings": {
     //"EnabledReferenceAssemblyScan": true, // 启用模块化程序集扫描
     //"ExternalAssemblies": [ "plugins/Covid19.Plugin" ] //动态加载 dll
-  }
+  },
+  "LowCodeConfig1": "123456",
+  "LowCodeConfig": [
+    {
+      "Name": "ORM对象",
+      "Source": {
+        "File": "{HostPath}\\Template\\Entity.cs.cshtml"
+      },
+      "Target": {
+        "File": "{ClassName}.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Entity\\"
+      }
+    },
+    {
+      "Name": "Service",
+      "Source": {
+        "File": "{HostPath}\\Template\\Service.cs.cshtml"
+      },
+      "Target": {
+        "File": "Service.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Service\\{ClassName}\\"
+      }
+    },
+    {
+      "Name": "IService",
+      "Source": {
+        "File": "{HostPath}\\Template\\IService.cs.cshtml"
+      },
+      "Target": {
+        "File": "IService.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Service\\{ClassName}\\"
+      }
+    },
+    {
+      "Name": "Input",
+      "Source": {
+        "File": "{HostPath}\\Template\\Input.cs.cshtml"
+      },
+      "Target": {
+        "File": "{ClassName}Input.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Service\\{ClassName}\\Dto\\"
+      }
+    },
+    {
+      "Name": "Output",
+      "Source": {
+        "File": "{HostPath}\\Template\\Output.cs.cshtml"
+      },
+      "Target": {
+        "File": "{ClassName}Output.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Service\\{ClassName}\\Dto\\"
+      }
+    },
+    {
+      "Name": "Dto",
+      "Source": {
+        "File": "{HostPath}\\Template\\Dto.cs.cshtml"
+      },
+      "Target": {
+        "File": "{ClassName}Dto.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Service\\{ClassName}\\Dto\\"
+      }
+    },
+    {
+      "Name": "Mapper",
+      "Source": {
+        "File": "{HostPath}\\Template\\Mapper.cs.cshtml"
+      },
+      "Target": {
+        "File": "Mapper.cs",
+        "Dir": "{CodePath}\\{NameSpace}\\Service\\{ClassName}\\"
+      }
+    },
+    {
+      "Name": "index",
+      "Source": {
+        "File": "{HostPath}\\Template\\index.vue.cshtml"
+      },
+      "Target": {
+        "File": "index.vue",
+        "Dir": "{FrontendPath}\\{ClassName}\\"
+      }
+    },
+    {
+      "Name": "addForm",
+      "Source": {
+        "File": "{HostPath}\\Template\\addForm.vue.cshtml"
+      },
+      "Target": {
+        "File": "addForm.vue",
+        "Dir": "{FrontendPath}\\{ClassName}\\"
+      }
+    },
+    {
+      "Name": "editForm",
+      "Source": {
+        "File": "{HostPath}\\Template\\editForm.vue.cshtml"
+      },
+      "Target": {
+        "File": "editForm.vue",
+        "Dir": "{FrontendPath}\\{ClassName}\\"
+      }
+    },
+    {
+      "Name": "Manage",
+      "Source": {
+        "File": "{HostPath}\\Template\\Manage.js.cshtml"
+      },
+      "Target": {
+        "File": "{ClassName}Manage.js",
+        "Dir": "{ApiJsPath}\\"
+      }
+    }
+  ]
+
+
   //"Kestrel": { //预留服务器配置
   //  "EndPoints": {
   //    "Http": {
