--- a/backend/Admin.NET.Web.Entry/Admin.NET.Web.Entry.csproj
+++ b/backend/Admin.NET.Web.Entry/Admin.NET.Web.Entry.csproj
@@ -36,4 +36,6 @@
     <RuntimeHostConfigurationOption Include="System.Drawing.EnableUnixSupport" Value="true" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
